--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@
 
 name: Fiscal Ledger
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [master]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,6 +30,6 @@ jobs:
           node-version: 12
       # Runs a set of commands using the runners shell
       - name: Installing surge
-        run:  npm install --global surge
+        run: npm install --global surge
       - name: Deploying using surge
-        run:  surge ./ --domain https://FiscalLedger.surge.sh --token ${{ secrets.TOKEN_SURGE }}
+        run: surge ./ --domain https://FiscalLedger.surge.sh --token ${{ secrets.SURGE_TOKEN }}
